[gd_scene load_steps=7 format=3 uid="uid://cbvoxqmnvpgxx"]

[ext_resource type="Script" uid="uid://clx43j302b40g" path="res://setcard.gd" id="1_h2yge"]
[ext_resource type="Texture2D" uid="uid://7fglu7e8utkl" path="res://cheese_backgrund.jpg" id="2_1bvp3"]
[ext_resource type="Script" uid="uid://jbaoyatn2rks" path="res://draganddrop.gd" id="3_1bvp3"]
[ext_resource type="Texture2D" uid="uid://dhmt15tegl00k" path="res://ze_biscuit.png" id="3_7mycd"]
[ext_resource type="PackedScene" uid="uid://cflc0d3q2v1u3" path="res://player.tscn" id="3_lquwl"]

[sub_resource type="LabelSettings" id="LabelSettings_lquwl"]
line_spacing = 2.99
font_size = 33

[node name="Node2D" type="Node2D"]
script = ExtResource("1_h2yge")

[node name="CheeseBackgrund" type="Sprite2D" parent="."]
position = Vector2(966, 539.131)
scale = Vector2(6.44, 6.4151)
texture = ExtResource("2_1bvp3")

[node name="card1" type="Sprite2D" parent="." groups=["playerCards"]]
position = Vector2(176, 450)
scale = Vector2(4.5, 4.5)
texture = ExtResource("3_7mycd")
script = ExtResource("3_1bvp3")

[node name="Label" type="Label" parent="card1"]
texture_filter = 2
offset_left = -18.51
offset_top = -20.09
offset_right = 18.49
offset_bottom = 19.92
scale = Vector2(0.23, 0.23)
label_settings = SubResource("LabelSettings_lquwl")

[node name="card2" type="Sprite2D" parent="." groups=["playerCards"]]
position = Vector2(695.695, 450)
scale = Vector2(4.5, 4.5)
texture = ExtResource("3_7mycd")
script = ExtResource("3_1bvp3")

[node name="Label" type="Label" parent="card2"]
texture_filter = 2
offset_left = -18.51
offset_top = -20.09
offset_right = 18.49
offset_bottom = 19.92
scale = Vector2(0.23, 0.23)
label_settings = SubResource("LabelSettings_lquwl")

[node name="card3" type="Sprite2D" parent="." groups=["playerCards"]]
position = Vector2(509, 450)
scale = Vector2(4.5, 4.5)
texture = ExtResource("3_7mycd")
script = ExtResource("3_1bvp3")

[node name="Label" type="Label" parent="card3"]
texture_filter = 2
offset_left = -18.51
offset_top = -20.09
offset_right = 18.49
offset_bottom = 19.92
scale = Vector2(0.23, 0.23)
label_settings = SubResource("LabelSettings_lquwl")

[node name="card4" type="Sprite2D" parent="." groups=["playerCards"]]
position = Vector2(344.593, 450)
scale = Vector2(4.5, 4.5)
texture = ExtResource("3_7mycd")
script = ExtResource("3_1bvp3")

[node name="Label" type="Label" parent="card4"]
texture_filter = 2
offset_left = -18.51
offset_top = -20.09
offset_right = 18.49
offset_bottom = 19.92
scale = Vector2(0.23, 0.23)
label_settings = SubResource("LabelSettings_lquwl")

[node name="card5" type="Sprite2D" parent="." groups=["playerCards"]]
position = Vector2(870, 437)
scale = Vector2(4.5, 4.5)
texture = ExtResource("3_7mycd")
script = ExtResource("3_1bvp3")

[node name="Label" type="Label" parent="card5"]
texture_filter = 2
offset_left = -18.51
offset_top = -20.09
offset_right = 18.49
offset_bottom = 19.92
scale = Vector2(0.23, 0.23)
label_settings = SubResource("LabelSettings_lquwl")

[node name="card6" type="Sprite2D" parent="." groups=["playerCards"]]
position = Vector2(176.25, 234)
scale = Vector2(4.5, 4.5)
texture = ExtResource("3_7mycd")
script = ExtResource("3_1bvp3")

[node name="Label" type="Label" parent="card6"]
texture_filter = 2
offset_left = -18.51
offset_top = -20.09
offset_right = 18.49
offset_bottom = 19.92
scale = Vector2(0.23, 0.23)
label_settings = SubResource("LabelSettings_lquwl")

[node name="card7" type="Sprite2D" parent="." groups=["playerCards"]]
position = Vector2(719, 232)
scale = Vector2(4.5, 4.5)
texture = ExtResource("3_7mycd")
script = ExtResource("3_1bvp3")

[node name="Label" type="Label" parent="card7"]
texture_filter = 2
offset_left = -18.51
offset_top = -20.09
offset_right = 18.49
offset_bottom = 19.92
scale = Vector2(0.23, 0.23)
label_settings = SubResource("LabelSettings_lquwl")

[node name="card8" type="Sprite2D" parent="." groups=["playerCards"]]
position = Vector2(492, 228)
scale = Vector2(4.5, 4.5)
texture = ExtResource("3_7mycd")
script = ExtResource("3_1bvp3")

[node name="Label" type="Label" parent="card8"]
texture_filter = 2
offset_left = -18.51
offset_top = -20.09
offset_right = 18.49
offset_bottom = 19.92
scale = Vector2(0.23, 0.23)
label_settings = SubResource("LabelSettings_lquwl")

[node name="player" parent="." instance=ExtResource("3_lquwl")]
position = Vector2(339.099, 476.724)

[node name="winner" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[connection signal="discard" from="card1" to="." method="_on_card_discard"]
[connection signal="discard" from="card2" to="." method="_on_card_discard"]
[connection signal="discard" from="card3" to="." method="_on_card_discard"]
[connection signal="discard" from="card4" to="." method="_on_card_discard"]
[connection signal="discard" from="card5" to="." method="_on_card_discard"]
[connection signal="discard" from="card6" to="." method="_on_card_discard"]
[connection signal="discard" from="card7" to="." method="_on_card_discard"]
[connection signal="discard" from="card8" to="." method="_on_card_discard"]
